# sina_site

./: .gitignore  Makefile  manage.py  pyproject.toml  sina.sqlite3
sina_site/: asgi.py  mixins.py  settings.py  urls.py  views.py  wsgi.py
sina_site/analytics/: apps.py  controllers.py  forms.py  models.py  urls.py  views.py
sina_site/analytics/migrations/: 0001_initial.py  0002_alter_product_product_id.py
sina_site/customers/: admin.py  apps.py  models.py  urls.py  views.py
sina_site/customers/migrations/: 0001_initial.py
sina_site/fixtures/: db.json  fixtures.json
sina_site/labels/: admin.py  apps.py  forms.py  tests.py  urls.py  views.py
sina_site/labels/migrations/: 0001_initial.py
sina_site/reviews/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
sina_site/reviews/migrations/: 0001_initial.py
sina_site/shift_schedule/: apps.py  controllers.py  forms.py  models.py  urls.py  views.py
sina_site/shift_schedule/migrations/: 0001_initial.py  0002_remove_shift_friday_remove_shift_monday_and_more.py  0003_shift_week_day.py  0004_remove_shift_end_time_remove_shift_start_time_and_more.py  0005_rename_shift_shift_shift.py  (+3 more)
sina_site/staff/: apps.py  forms.py  tests.py  urls.py  views.py
sina_site/statuses/: admin.py  apps.py  forms.py  tests.py  urls.py  views.py
sina_site/tasks/: admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
sina_site/templates/: base.html  form.html  index.html  login.html
sina_site/users/: admin.py  apps.py  urls.py  views.py
sina_site/utils/: test_helpers.py
(+19 files in other folders)
