[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["AntonLysachev <anton@lysachev.ru>"]
readme = "README.md"
packages = [{include = "sina_site"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.3"
gunicorn = "^21.2.0"
django-bootstrap5 = "^23.4"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"
dj-database-url = "^2.1.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"
pytest = "^8.2.1"
pytest-cov = "^5.0.0"
pytest-django = "^4.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
